# coreason-publisher

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_AND_UTILITY.md  Dockerfile  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml  test_output.txt
docs/: architecture.md  index.md  requirements.md  usage.md
src/coreason_publisher/: __init__.py  config.py  main.py  server.py
src/coreason_publisher/core/: artifact_bundler.py  assay_client.py  certificate_generator.py  council_snapshot.py  electronic_signer.py  foundry_client.py  git_lfs.py  git_local.py  git_provider.py  gitlab_provider.py  http_assay_client.py  http_foundry_client.py  orchestrator.py  remote_storage.py  version_manager.py
src/coreason_publisher/templates/: __init__.py  certificate.md.j2
src/coreason_publisher/utils/: __init__.py  logger.py
tests/: conftest.py  test_artifact_bundler.py  test_artifact_bundler_complex.py  test_artifact_bundler_edge_cases.py  test_assay_client.py  test_certificate_generator.py  test_config.py  test_council_snapshot.py  test_git_lfs.py  test_gitlab_provider.py  test_main.py  test_remote_storage.py  test_server.py  test_utils.py
tests/core/: test_audit_integration.py  test_electronic_signer.py  test_electronic_signer_complex.py  test_foundry_client.py  test_git_local.py  test_git_local_edge_cases.py  test_orchestrator_complex.py  test_orchestrator_propose.py  test_orchestrator_reject.py  test_orchestrator_release.py  test_version_manager.py
