[tool.poetry]
name = "coreason_publisher"
version = "0.4.1"
description = "agent from Development (mutable drafts) to Production (immutable artifacts)"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_publisher", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
python-gitlab = "^8.0.0"
httpx = "^0.28.1"
jinja2 = "^3.1.6"
gitpython = "^3.1.46"
typer = "^0.21.1"
pydantic-settings = "^2.12.0"
tenacity = "^9.1.2"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
python-multipart = "^0.0.22"
coreason-identity = "*"
anyio = "^4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
respx = "^0.22.0"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_publisher"
version = "0.4.1"
description = "agent from Development (mutable drafts) to Production (immutable artifacts)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_publisher"
Repository = "https://github.com/CoReason-AI/coreason_publisher"
Documentation = "https://github.com/CoReason-AI/coreason_publisher"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
